--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing-page 4</title>
-    <link rel="stylesheet" href="style.css">
-</head>   
+    <title>Webpage 4 </title>
+</head>
 <body>
-    hello 
+    <h1>Oops</h1>
 </body>
 </html>
